add options API
