# src/swagger.json
@@ -26,7 +26,9 @@
   "paths": {
     "/api/v1/categories": {
       "get": {
-        "tags": ["Categories"],
+        "tags": [
+          "Categories"
+        ],
         "description": "Returns list of categories",
         "produces": [
           "application/json"
@@ -58,7 +60,9 @@
     },
     "/api/v1/product/:id": {
       "get": {
-        "tags": ["Products"],
+        "tags": [
+          "Products"
+        ],
         "description": "Returns list of products",
         "produces": [
           "application/json"
@@ -66,13 +70,15 @@
         "consumes": [
           "application/json"
         ],
-        "parameters": [{
-          "in": "path",
-          "name": "id",
-          "description": "product's id",
-          "required": true,
-          "type": "integer"
-        }],
+        "parameters": [
+          {
+            "in": "path",
+            "name": "id",
+            "description": "product's id",
+            "required": true,
+            "type": "integer"
+          }
+        ],
         "responses": {
           "200": {
             "description": "OK",
@@ -97,7 +103,9 @@
     },
     "/api/v1/category/:id": {
       "get": {
-        "tags": ["Product"],
+        "tags": [
+          "Product"
+        ],
         "description": "Returns list of products by category id",
         "produces": [
           "application/json"
@@ -105,13 +113,15 @@
         "consumes": [
           "application/json"
         ],
-        "parameters": [{
-          "in": "path",
-          "name": "id",
-          "description": "category's id",
-          "required": true,
-          "type": "integer"
-        }],
+        "parameters": [
+          {
+            "in": "path",
+            "name": "id",
+            "description": "category's id",
+            "required": true,
+            "type": "integer"
+          }
+        ],
         "responses": {
           "200": {
             "description": "OK",
@@ -136,7 +146,9 @@
     },
     "/api/v1/checkout": {
       "post": {
-        "tags": ["Checkout"],
+        "tags": [
+          "Checkout"
+        ],
         "description": "Order products | product",
         "produces": [
           "application/json"
@@ -144,23 +156,210 @@
         "consumes": [
           "application/json"
         ],
-        "parameters": [{
-          "in": "body",
-          "name": "body",
-          "description": "body request checkout",
-          "required": true,
-          "schema": {
-            "$ref": "#/definitions/checkoutBodyRequest"
+        "parameters": [
+          {
+            "in": "body",
+            "name": "body",
+            "description": "body request checkout",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/checkoutBodyRequest"
+            }
           }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "schema": {
+              "$ref": "#/definitions/simpleOk"
+            }
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "404": {
+            "description": "Not Found"
+          }
+        }
+      }
+    },
+    "/api/v1/product/options": {
+      "post": {
+        "tags": [
+          "Products"
+        ],
+        "description": "Create option product",
+        "produces": [
+          "application/json"
+        ],
+        "consumes": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "in": "body",
+            "name": "body",
+            "description": "body request option",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/optionProduct"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "schema": {
+              "$ref": "#/definitions/simpleOk"
+            }
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "404": {
+            "description": "Not Found"
+          }
+        }
+      },
+      "get": {
+        "tags": [
+          "Products"
+        ],
+        "description": "get all options",
+        "produces": [
+          "application/json"
+        ],
+        "consumes": [
+          "application/json"
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "schema": {
+              "type": "array",
+              "items": {
+                "$ref": "#/definitions/optionProduct"
+              }
+            }
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "404": {
+            "description": "Not Found"
+          }
+        }
+      },
+      "put": {
+        "tags": [
+          "Products"
+        ],
+        "description": "update option",
+        "produces": [
+          "application/json"
+        ],
+        "consumes": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "in": "body",
+            "name": "body",
+            "description": "body request option",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/optionProduct"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "schema": {
+              "$ref": "#/definitions/optionProduct"
+            }
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "404": {
+            "description": "Not Found"
+          }
+        }
+      }
+    },
+    "/api/v1/product/options/:id": {
+      "get": {
+        "tags": [
+          "Products"
+        ],
+        "description": "get option by id",
+        "produces": [
+          "application/json"
+        ],
+        "consumes": [
+          "application/json"
+        ],
+        "parameters": [{
+          "in": "path",
+          "name": "id",
+          "description": "Option's id",
+          "required": true,
+          "type": "integer"
         }],
         "responses": {
           "200": {
             "description": "OK",
             "schema": {
-              "type": "object",
-              "items": {
-                "$ref": "#/definitions/simpleOk"
-              }
+              "$ref": "#/definitions/optionProduct"
+            }
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "404": {
+            "description": "Not Found"
+          }
+        }
+      },
+      "delete": {
+        "tags": [
+          "Products"
+        ],
+        "description": "remove option by id",
+        "produces": [
+          "application/json"
+        ],
+        "consumes": [
+          "application/json"
+        ],
+        "parameters": [{
+          "in": "path",
+          "name": "id",
+          "description": "Option's id",
+          "required": true,
+          "type": "integer"
+        }],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "schema": {
+              "$ref": "#/definitions/simpleOk"
             }
           },
           "401": {
@@ -366,6 +565,33 @@
             },
             "phone": {
               "type": "string"
+            }
+          }
+        }
+      }
+    },
+    "optionProduct": {
+      "type": "object",
+      "properties": {
+        "name": {
+          "type": "string"
+        },
+        "optionType": {
+          "type": "string",
+          "enum": [
+            "checkbox",
+            "radio",
+            "select"
+          ]
+        },
+        "optionValues": {
+          "type": "array",
+          "items": {
+            "type": "object",
+            "properties": {
+              "name": {
+                "type": "string"
+              }
             }
           }
         }
